--- a/src/app/device-template/add-device-template/add-device-template.page.scss
+++ b/src/app/device-template/add-device-template/add-device-template.page.scss
@@ -2,3 +2,12 @@
     font-size: small;
     color: tomato;
 }
+
+.save {
+    border-color: transparent;
+    background-color: transparent;
+    color: rgba(29, 127, 219, 0.76);
+    margin-left: 40px;
+    margin-right: 40px;
+    font-size: 14px;
+}
