--- a/src/app/device-template/add-command/add-command.page.html
+++ b/src/app/device-template/add-command/add-command.page.html
@@ -20,8 +20,8 @@
         </ion-item>
         <ion-item>
             <ion-label>isSynchronous</ion-label>
-            <ion-toggle name="isSyn" formControlName="isSync" checked="true"></ion-toggle>
+            <ion-toggle name="isSyn" formControlName="IsSynchronous" checked="true"></ion-toggle>
         </ion-item>
-        <ion-button expand="block " type="submit " shape="round " fill="solid " type="submit" class="btn btn-block btn-success">Add command</ion-button>
+        <ion-button expand="block " type="submit " shape="round " fill="solid " type="submit" class="btn btn-block btn-success">Save command</ion-button>
     </form>
 </ion-content>
