--- a/src/app/device-template/add-telemetry/add-telemetry.page.html
+++ b/src/app/device-template/add-telemetry/add-telemetry.page.html
@@ -83,8 +83,8 @@
 
 
     </form>
-    <!-- <ion-item detail [routerLink]="['SpecificTelemetry']">
+    <ion-item detail [routerLink]="['SpecificTelemetry']">
         <ion-label>Specific Telemetry</ion-label>
-    </ion-item> -->
+    </ion-item>
 
 </ion-content>
