--- a/src/app/device-template/list-telemetries/list-telemetries.page.html
+++ b/src/app/device-template/list-telemetries/list-telemetries.page.html
@@ -16,8 +16,10 @@
 </div> -->
 
     <ion-list-header>
-        <ion-label>List of telemetries</ion-label>
-
+        <ion-label *ngIf="!arrayIsEmpty">List of telemetries</ion-label>
+        <ion-item *ngIf="arrayIsEmpty">
+            <ion-label>There is no telemetry</ion-label>
+        </ion-item>
     </ion-list-header>
 
     <ion-list>
@@ -25,6 +27,7 @@
 
             <ion-item-sliding>
                 <ion-item lines="inset" detail [routerLink]="['profileTelemetry',deviceTelemetry['Id']]">
+                    <ion-label>{{deviceTelemetry['Id']}}</ion-label>
 
 
                     <ion-avatar slot="start">
@@ -34,13 +37,12 @@
                 </ion-item>
 
                 <ion-item-options side="end">
-                    <ion-item-option color="danger" expandable>
+                    <ion-item-option color="danger" (click)="deleteTelemetry(deviceTelemetry['Id'], deviceTelemetry['Name'])" expandable>
                         <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
                     </ion-item-option>
                 </ion-item-options>
             </ion-item-sliding>
         </div>
     </ion-list>
-
 
 </ion-content>
