--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,19 +13,19 @@
     <section id="dashboardSection">
         <ion-grid>
             <ion-row>
-                <ion-col size="4" class="ion-align-self-start" [routerLink]="['/tabs/tab1/caregivers']">
+                <ion-col size="4" class="ion-align-self-start" [routerLink]="['caregivers']">
                     <ion-card color="transparent" class="nurse-card">
                         <ion-img src='assets/icon/caregiverW.svg'></ion-img>
                         <ion-label>Caregivers</ion-label>
                     </ion-card>
                 </ion-col>
-                <ion-col size="4" class="ion-align-self-center" [routerLink]="['/tabs/tab1/disability-profile']">
+                <ion-col size="4" class="ion-align-self-center" [routerLink]="['disability-profile']">
                     <ion-card color="transparent" class="disability-card">
                         <ion-img src='assets/icon/disabilityW.svg'></ion-img>
                         <ion-label>Disability profile</ion-label>
                     </ion-card>
                 </ion-col>
-                <ion-col size="4" class="ion-align-self-end" [routerLink]="['/tabs/tab1/device-template']">
+                <ion-col size="4" class="ion-align-self-end" [routerLink]="['device-template']">
                     <ion-card color="transparent" class="deviceTemplate-card">
                         <ion-img src='assets/icon/deviceTemplateW.svg'></ion-img>
                         <ion-label>Device template</ion-label>
@@ -33,7 +33,7 @@
                 </ion-col>
             </ion-row>
             <ion-row>
-                <ion-col size="4" class="ion-align-self-start" [routerLink]="['/tabs/tab1/telemetry-data']">
+                <ion-col size="4" class="ion-align-self-start" [routerLink]="['telemetry-data']">
                     <ion-card text-center color="transparent" class="nurse-card">
                         <ion-img src='assets/icon/telemetryDataW.svg'></ion-img>
                         <ion-label>Telemetry Data</ion-label>
