V1 Con error de perfil de telemetrias Commands

--- a/src/app/device-template/list-properties/list-properties.page.html
+++ b/src/app/device-template/list-properties/list-properties.page.html
@@ -26,7 +26,7 @@
         <div class="telemetry" *ngFor="let deviceProperty of deviceTemplateProperties">
 
             <ion-item-sliding>
-                <ion-item lines="inset" detail [routerLink]="['profileProperty']">
+                <ion-item lines="inset" detail [routerLink]="['profileProperty',deviceProperty['Id']]">
 
 
                     <ion-avatar slot="start">
