--- a/src/app/device-template/list-commands/list-commands.page.html
+++ b/src/app/device-template/list-commands/list-commands.page.html
@@ -27,7 +27,7 @@
         <div class="telemetry" *ngFor="let deviceCommand of deviceTemplateCommands">
 
             <ion-item-sliding>
-                <ion-item lines="inset" detail [routerLink]="['profile-command']">
+                <ion-item lines="inset" detail [routerLink]="['profile-command',deviceCommand['Id']]">
 
 
                     <ion-avatar slot="start">
