--- a/src/app/device-template/device-template.page.html
+++ b/src/app/device-template/device-template.page.html
@@ -1,25 +1,61 @@
-<ion-header>
-    <ion-toolbar>
+<!-- <ion-header>
+    <ion-toolbar color="translucent">
         <ion-back-button slot="start"></ion-back-button>
-        <ion-title class="ion-text-center">Device templates </ion-title>
+        <ion-title class="ion-text-center">Home</ion-title>
 
         <ion-icon class="ionadd" name="add-circle-outline" size="large" slot="end" [routerLink]="['add-device-template']"></ion-icon>
 
 
 
     </ion-toolbar>
+</ion-header> -->
+<ion-header>
+
+    <ion-toolbar>
+        <ion-icon class="ionadd" name="add-outline" slot="end" [routerLink]="['add-device-template']"></ion-icon>
+        <ion-buttons slot="start">
+            <ion-back-button text="Home" icon="chevron-back-outline"></ion-back-button>
+        </ion-buttons>
+        <ion-buttons slot="end">
+            <ion-button>
+            </ion-button>
+        </ion-buttons>
+
+    </ion-toolbar>
+    <ion-row>
+        <ion-col size="4" class="ion-align-self-start">
+
+        </ion-col>
+        <ion-col size="4" class="ion-align-self-end">
+            <ion-card color="transparent" class="deviceTemplate-card">
+                <ion-img src='assets/icon/deviceTemp.png'></ion-img>
+
+            </ion-card>
+        </ion-col>
+        <ion-col size="4" class="ion-align-self-center">
+        </ion-col>
+
+    </ion-row>
+    <ion-row>
+        <ion-col size="1" class="ion-align-self-start">
+
+        </ion-col>
+        <ion-col size="10" class="ion-align-self-center">
+
+            <ion-list-header>
+                <ion-label class="text-top">Device templates</ion-label>
+            </ion-list-header>
+
+        </ion-col>
+        <ion-col size="1" class="ion-align-self-end">
+
+        </ion-col>
+
+    </ion-row>
 </ion-header>
-
 <ion-content>
-    <!--  <div class="ion-text-right">
-        <ion-button rel="rel" expand="full" size="default" shape="round" fill="solid" [routerLink]="['add-device-template']">Add device template</ion-button>
-    </div> -->
 
 
-    <ion-list-header>
-        <ion-label>List of device templates</ion-label>
-
-    </ion-list-header>
 
 
     <ion-list>
