--- a/src/app/device-template/device-template.page.scss
+++ b/src/app/device-template/device-template.page.scss
@@ -1,8 +1,3 @@
-.ionadd {
-    margin-right: 15px;
-}
-
-
 /* DOES NOT WORK - not specific enough */
 
 ion-loading {
@@ -14,4 +9,27 @@ ion-loading {
 
 .my-custom-class {
     color: green;
+}
+
+ion-card {
+    box-shadow: none !important
+}
+
+ion-toolbar {
+    --background: rgb(248, 248, 248);
+}
+
+ion-header {
+    background-color: rgb(248, 248, 248);
+}
+
+.text-top {
+    text-align: center;
+    margin-top: -18px;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.ion-align-self-end {
+    margin-top: -18px;
 }
