--- a/src/app/device-template/profile-device-template/profile-device-template.page.html
+++ b/src/app/device-template/profile-device-template/profile-device-template.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
     <ion-toolbar>
         <ion-back-button slot="start"></ion-back-button>
 
@@ -8,15 +8,78 @@
         <ion-icon slot="end" size="large" src="assets/icon/deviceTemplate.svg"></ion-icon>
 
     </ion-toolbar>
+</ion-header> -->
+<ion-header>
+
+    <ion-toolbar>
+        <!-- <ion-icon class="ionadd" name="add-outline" slot="end" [routerLink]="['add-device-template']"></ion-icon> -->
+        <ion-buttons slot="start">
+            <ion-back-button text="Device templates" icon="chevron-back-outline"></ion-back-button>
+        </ion-buttons>
+        <ion-buttons slot="end">
+            <ion-button>
+            </ion-button>
+        </ion-buttons>
+
+    </ion-toolbar>
+    <ion-row>
+        <ion-col size="4" class="ion-align-self-start">
+
+        </ion-col>
+        <ion-col size="4" class="ion-align-self-end">
+            <ion-card color="transparent" class="deviceTemplate-card">
+                <ion-img src='assets/icon/deviceTemp.png'></ion-img>
+
+            </ion-card>
+        </ion-col>
+        <ion-col size="4" class="ion-align-self-center">
+        </ion-col>
+
+    </ion-row>
+    <ion-row>
+        <ion-col size="1" class="ion-align-self-start">
+
+        </ion-col>
+        <ion-col size="10" class="ion-align-self-center">
+
+            <ion-list-header>
+                <ion-label class="text-top">{{ deviceTemplateProfile['Name']}}</ion-label>
+            </ion-list-header>
+
+        </ion-col>
+        <ion-col size="1" class="ion-align-self-end">
+
+        </ion-col>
+
+    </ion-row>
+    <ion-row class="iconText">
+        <ion-col size="3" class="ion-align-self-center">
+            <ion-icon name="reader-outline" [routerLink]="['add-device-template']"></ion-icon>
+            <ion-label>Profile</ion-label>
+        </ion-col>
+        <ion-col size="3" class="ion-align-self-center">
+            <ion-icon name="pie-chart-outline" [routerLink]="['add-device-template']"></ion-icon>
+            <ion-label>Telemetries</ion-label>
+        </ion-col>
+        <ion-col size="3" class="ion-align-self-center">
+            <ion-icon name="flash-outline" [routerLink]="['add-device-template']"></ion-icon>
+            <ion-label>Commands</ion-label>
+        </ion-col>
+        <ion-col size="3" class="ion-align-self-center">
+            <ion-icon name="options-outline" [routerLink]="['add-device-template']"></ion-icon>
+            <ion-label>Properties</ion-label>
+        </ion-col>
+    </ion-row>
 </ion-header>
 
+
 <ion-content>
-    <div class="ion-text-right">
+    <!-- <div class="ion-text-right">
 
         <ion-button expand="full" shape="round" fill="outline">Edit Device template
             <ion-icon slot="end" name="pencil"></ion-icon>
         </ion-button>
-    </div>
+    </div> -->
     <ion-card>
 
         <ion-item [hidden]="deviceTemplateProfile['IsEdge'] === false">
