--- a/src/app/device-template/profile-device-template/profile-device-template.page.scss
+++ b/src/app/device-template/profile-device-template/profile-device-template.page.scss
@@ -1,3 +1,18 @@
+:root {
+    ion-tab-button:nth-child(1) {
+        ion-icon {
+            color: var(--ion-color-secondary) !important;
+            /* --ion-color-base: var(--ion-color-secondary) !important; */
+        }
+    }
+    ion-tab-button.tab-selected:nth-child(1) {
+        ion-icon {
+            color: var(--ion-color-secondary) !important;
+            /* --ion-color-base: var(--ion-color-secondary) !important; */
+        }
+    }
+}
+
 ion-loading {
     color: green;
 }
@@ -37,4 +52,19 @@ ion-header {
     position: flex;
     font-size: 12px;
     margin-left: 10px;
+}
+
+app-component-telemetry {
+    width: 100%;
+}
+
+ion-segment-button {
+    width: 40px;
+    margin-top: 2px;
+    margin-left: 4px;
+    margin-right: 4px;
+    font-size: 10px;
+    border: none;
+    background-color: rgb(248, 248, 248);
+    border-radius: 50%;
 }
