--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,20 +1,24 @@
 <ion-tabs>
 
+
     <ion-tab-bar slot="bottom">
+
+
+
         <ion-tab-button tab="tab1">
-            <ion-icon name="keypad-outline"></ion-icon>
-            <ion-label>Dashboard</ion-label>
+            <ion-icon name="cog-outline"></ion-icon>
+            <ion-label>Device template</ion-label>
         </ion-tab-button>
 
         <ion-tab-button tab="tab2">
-            <ion-icon name="person-circle-outline"></ion-icon>
+            <ion-icon name="accessibility-outline"></ion-icon>
 
-            <ion-label>Profile</ion-label>
+            <ion-label>Patiente profile</ion-label>
         </ion-tab-button>
 
         <ion-tab-button tab="tab3">
-            <ion-icon name="help-buoy-outline"></ion-icon>
-            <ion-label>Help</ion-label>
+            <ion-icon name="medkit-outline"></ion-icon>
+            <ion-label>Care plan</ion-label>
         </ion-tab-button>
     </ion-tab-bar>
 
