add - telemetry - command - property

--- a/src/app/device-template/add-device-template/add-device-template.page.html
+++ b/src/app/device-template/add-device-template/add-device-template.page.html
@@ -1,82 +1,110 @@
 <ion-header>
+
     <ion-toolbar>
-        <ion-back-button slot="start"></ion-back-button>
-
-        <ion-title class="ion-text-center">Add device template</ion-title>
-
-        <ion-icon slot="end" size="large" src="assets/icon/deviceTemplate.svg"></ion-icon>
+        <ion-buttons slot="start">
+            <ion-back-button text="Device Templates" icon="chevron-back-outline"></ion-back-button>
+        </ion-buttons>
+        <ion-buttons slot="end">
+            <ion-button>
+            </ion-button>
+        </ion-buttons>
 
     </ion-toolbar>
+    <ion-row>
+        <ion-col size="4" class="ion-align-self-start">
 
+        </ion-col>
+        <ion-col size="4" class="ion-align-self-end">
+            <ion-card color="transparent" class="deviceTemplate-card">
+                <ion-img src='assets/icon/deviceTemp.png'></ion-img>
+
+            </ion-card>
+        </ion-col>
+        <ion-col size="4" class="ion-align-self-center">
+        </ion-col>
+
+    </ion-row>
+    <ion-row>
+        <ion-col size="1" class="ion-align-self-start">
+
+        </ion-col>
+        <ion-col size="10" class="ion-align-self-center">
+
+            <ion-list-header>
+                <ion-label class="text-top">Add Device template</ion-label>
+            </ion-list-header>
+
+        </ion-col>
+        <ion-col size="1" class="ion-align-self-end">
+
+        </ion-col>
+
+    </ion-row>
+    <ion-segment value="all" color="tertiary" scrollable="true" mode="md" [(ngModel)]="segmentModel" (ionChange)="segmentChanged($event)" lines="none">
+        <ion-segment-button value="deviceTemplate">
+            <ion-icon name="reader-outline"></ion-icon>
+            <ion-label>Profile</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="telemetries" [disabled]="!deviceOk">
+            <ion-icon name="radio-outline"></ion-icon>
+            <ion-label>Telemetries</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="properties" [disabled]="!deviceOk">
+            <ion-icon name="options-outline"></ion-icon>
+            <ion-label>Properties</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="commands" [disabled]="!deviceOk">
+            <ion-icon name="flash-outline"></ion-icon>
+            <ion-label>Commands</ion-label>
+        </ion-segment-button>
+    </ion-segment>
 </ion-header>
 
 <ion-content>
-    <form [formGroup]="deviceTemplateForm" (ngSubmit)="onSubmit()">
-        <ion-item [disabled]="deviceOk">
-            <ion-label position="stacked">Device template name</ion-label>
-            <ion-input type="text" formControlName="name" class="form-control"></ion-input>
-            <div class="error" *ngIf="deviceTemplateForm.controls.name.errors && deviceTemplateForm.controls.name.touched">
-                To add Device template please fill out this field
-            </div>
-        </ion-item>
-        <ion-item [disabled]="deviceOk">
-            <ion-label>isEdge</ion-label>
-            <ion-toggle formControlName="isEdge" class="form-control" checked="true"></ion-toggle>
-        </ion-item>
-
-        <ion-item lines="full" [disabled]="deviceOk">
-            <ion-label>Device type</ion-label>
-            <ion-select value="sensor" okText="Okay" cancelText="Dismiss" formControlName="type">
-                <div class="error" *ngIf="deviceTemplateForm.controls.type.errors && deviceTemplateForm.controls.type.touched">
-                    Please fill out this field
+    <div *ngIf="segmentModel === 'deviceTemplate'">
+        <form [formGroup]="deviceTemplateForm" (ngSubmit)="onSubmit()">
+            <ion-item [disabled]="deviceOk">
+                <ion-label position="stacked">Device template name</ion-label>
+                <ion-input type="text" formControlName="name" class="form-control"></ion-input>
+                <div class="error" *ngIf="deviceTemplateForm.controls.name.errors && deviceTemplateForm.controls.name.touched">
+                    To add Device template please fill out this field
                 </div>
-                <ion-select-option value="1">Sensor</ion-select-option>
-                <ion-select-option value="2">Actuator</ion-select-option>
-            </ion-select>
-        </ion-item>
-        <!-- 
-        <mat-accordion>
-            <mat-expansion-panel hideToggle>
-                <mat-expansion-panel-header>
-                    <ion-col size-xs="12" size-sm="6">
-                        <p class="ion-text-wrap">
-                            title
-                        </p>
-                    </ion-col>
-                    <ion-col class="ion-hide-sm-down" size-sm="3">
-                        <p>
-                            Nombre
-                        </p>
-                    </ion-col>
-                    <ion-col class="ion-hide-sm-down" size-sm="3">
-                        <p>
-                            fecha
-                        </p>
-                    </ion-col>
-                    <mat-panel-title>
-                        This is the expansion title
-                    </mat-panel-title>
-                    <mat-panel-description>
-                        This is a summary of the content
-                    </mat-panel-description>
-                </mat-expansion-panel-header>
-                <ion-label>
-                    <p class="ion-text-right mr-1 mb-1 ion-hide-sm-up" slot="end">
-                        <small>
-                       nombre<br> fecha
-                    </small>
-                    </p>
-                </ion-label>
-                <p>This is the primary content of the panel.</p>
-            </mat-expansion-panel>
-        </mat-accordion> -->
+            </ion-item>
+            <ion-item [disabled]="deviceOk">
+                <ion-label>isEdge</ion-label>
+                <ion-toggle formControlName="isEdge" class="form-control" checked="true"></ion-toggle>
+            </ion-item>
+
+            <ion-item lines="full" [disabled]="deviceOk">
+                <ion-label>Device type</ion-label>
+                <ion-select value="sensor" okText="Okay" cancelText="Dismiss" formControlName="type">
+                    <div class="error" *ngIf="deviceTemplateForm.controls.type.errors && deviceTemplateForm.controls.type.touched">
+                        Please fill out this field
+                    </div>
+                    <ion-select-option value="1">Sensor</ion-select-option>
+                    <ion-select-option value="2">Actuator</ion-select-option>
+                </ion-select>
+            </ion-item>
+            <br>
+            <br>
+            <ion-button expand="block " type="submit" class="save" size="small" fill="solid" type="submit" color="light" [hidden]="deviceOk" [disabled]="!deviceTemplateForm.valid">Save</ion-button>
+        </form>
+
+    </div>
+    <div *ngIf="segmentModel === 'telemetries'">
+        <app-add-telemetry-component></app-add-telemetry-component>
+
+    </div>
+    <div *ngIf="segmentModel === 'properties'">
+        <app-add-property-component></app-add-property-component>
+
+    </div>
+    <div *ngIf="segmentModel === 'commands'">
+        <app-add-command-component></app-add-command-component>
+
+    </div>
 
 
-
-        <br>
-        <br>
-        <ion-button expand="block " type="submit" class="save" size="small" fill="solid" type="submit" color="light" [disabled]="deviceOk" [disabled]="!deviceTemplateForm.valid">Save</ion-button>
-    </form>
 
     <ion-card>
         <ion-card-header [hidden]="!deviceOk" color="success"> Add another parameters for {{nameDeviceTemplate}} </ion-card-header>
@@ -95,61 +123,5 @@
     </ion-card>
 
     <br>
-
-    <div class="telemetries" line="">
-        <div class="telemetry" *ngFor="let telemetry of arrayTelemetries|keyvalue">
-            <mat-expansion-panel details>
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        <ion-item>
-                            <ion-thumbnail size="small" slot="start">
-                                <img src="assets/icon/deviceTemplate.svg">
-                            </ion-thumbnail>
-                            <ion-label>{{telemetry.value.Name}}</ion-label>
-                        </ion-item>
-                    </mat-panel-title>
-
-                </mat-expansion-panel-header>
-
-                <!--   <ion-item-sliding>
-            <ion-item-options side="end">
-                <ion-item-option color="danger" (click)="null" expandable>
-                    <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
-                </ion-item-option>
-            </ion-item-options>
-        </ion-item-sliding> -->
-
-                <ion-card>
-                    <ion-item>
-                        <ion-label>Frecuency</ion-label>
-                        <ion-badge slot="end">{{telemetry.value.Frecuency}}</ion-badge>
-                    </ion-item>
-                    <ion-item>
-                        <ion-label>Unit</ion-label>
-                        <ion-badge slot="end">{{telemetry.value.Unit}}</ion-badge>
-                    </ion-item>
-                    <ion-item>
-
-                        <ion-label>Schema</ion-label>
-                        <ion-badge slot="end">{{telemetry.value.Schema}}</ion-badge>
-                    </ion-item>
-                    <ion-item>
-                        <ion-label>Type</ion-label>
-                        <ion-badge slot="end">{{telemetry.value.Type}}</ion-badge>
-                    </ion-item>
-
-
-
-                </ion-card>
-                <!-- <p>Content panel.</p> -->
-
-            </mat-expansion-panel>
-
-
-
-        </div>
-    </div>
-
-
 
 </ion-content>
