--- a/src/app/device-template/add-device-template/add-device-template.page.html
+++ b/src/app/device-template/add-device-template/add-device-template.page.html
@@ -64,7 +64,7 @@
     <div *ngIf="segmentModel === 'deviceTemplate'">
         <form [formGroup]="deviceTemplateForm" (ngSubmit)="onSubmit()">
             <ion-item [disabled]="deviceOk">
-                <ion-label position="stacked">Device template name</ion-label>
+                <ion-label position="stacked">Name</ion-label>
                 <ion-input type="text" formControlName="name" class="form-control"></ion-input>
                 <div class="error" *ngIf="deviceTemplateForm.controls.name.errors && deviceTemplateForm.controls.name.touched">
                     To add Device template please fill out this field
@@ -87,9 +87,23 @@
             </ion-item>
             <br>
             <br>
-            <ion-button expand="block " type="submit" class="save" size="small" fill="solid" type="submit" color="light" [hidden]="deviceOk" [disabled]="!deviceTemplateForm.valid">Save</ion-button>
+            <ion-button expand="block " class="save" size="small" fill="solid" type="submit" color="light" [hidden]="deviceOk" [disabled]="!deviceTemplateForm.valid">Save</ion-button>
         </form>
+        <ion-card>
+            <ion-card-header [hidden]="!deviceOk" color="success" class="animate__animated animate__slideInUp animate__fast"> You can add another parameters for {{nameDeviceTemplate}} </ion-card-header>
 
+            <!--   <ion-item detail [disabled]="!deviceOk" [routerLink]="['add-telemetry',idDeviceTemplate]">
+                <ion-label>Telemetries</ion-label>
+            </ion-item>
+    
+            <ion-item detail [disabled]="!deviceOk" [routerLink]="['add-property',idDeviceTemplate]">
+                <ion-label>Properties</ion-label>
+            </ion-item>
+    
+            <ion-item detail [disabled]="!deviceOk" [routerLink]="['add-command',idDeviceTemplate]">
+                <ion-label>Commands</ion-label>
+            </ion-item> -->
+        </ion-card>
     </div>
     <div *ngIf="segmentModel === 'telemetries'">
         <app-add-telemetry-component></app-add-telemetry-component>
@@ -106,21 +120,7 @@
 
 
 
-    <ion-card>
-        <ion-card-header [hidden]="!deviceOk" color="success"> Add another parameters for {{nameDeviceTemplate}} </ion-card-header>
 
-        <ion-item detail [disabled]="!deviceOk" [routerLink]="['add-telemetry',idDeviceTemplate]">
-            <ion-label>Telemetries</ion-label>
-        </ion-item>
-
-        <ion-item detail [disabled]="!deviceOk" [routerLink]="['add-property',idDeviceTemplate]">
-            <ion-label>Properties</ion-label>
-        </ion-item>
-
-        <ion-item detail [disabled]="!deviceOk" [routerLink]="['add-command',idDeviceTemplate]">
-            <ion-label>Commands</ion-label>
-        </ion-item>
-    </ion-card>
 
     <br>
 
