--- a/src/app/device-template/add-command-component/add-command-component.component.html
+++ b/src/app/device-template/add-command-component/add-command-component.component.html
@@ -11,5 +11,7 @@
         <ion-label>isSynchronous</ion-label>
         <ion-toggle name="isSyn" formControlName="IsSynchronous" checked="true"></ion-toggle>
     </ion-item>
-    <ion-button expand="block " type="submit " shape="round " fill="solid " type="submit" class="btn btn-block btn-success">Save command</ion-button>
+    <br>
+    <br>
+    <ion-button expand="block " class="save" size="small" fill="solid" type="submit" color="light">Done</ion-button>
 </form>
