Change  routing Tab0 for dashboard

--- a/src/app/device-template/device-template.page.html
+++ b/src/app/device-template/device-template.page.html
@@ -12,9 +12,11 @@
 <ion-header>
 
     <ion-toolbar>
-        <ion-icon class="ionadd" name="add-outline" slot="end" [routerLink]="['add-device-template']"></ion-icon>
+
+        <ion-icon size="large" class="ionadd" name="add-outline" slot="end" [routerLink]="['add-device-template']"></ion-icon>
+
         <ion-buttons slot="start">
-            <ion-back-button text="Home" icon="chevron-back-outline"></ion-back-button>
+            <ion-back-button text="Home" defaultHref="/tabs" icon="chevron-back-outline"></ion-back-button>
         </ion-buttons>
         <ion-buttons slot="end">
             <ion-button>
