--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -5,7 +5,7 @@
 
 
 
-        <ion-tab-button tab="tab0">
+        <ion-tab-button [hidden]="true" tab="tab0">
             <ion-icon name="home-outline"></ion-icon>
             <ion-label>Home</ion-label>
         </ion-tab-button>
