--- a/src/app/device-template/add-device-template/add-device-template.page.html
+++ b/src/app/device-template/add-device-template/add-device-template.page.html
@@ -45,7 +45,7 @@
             <ion-icon name="reader-outline"></ion-icon>
             <ion-label>Profile</ion-label>
         </ion-segment-button>
-        <ion-segment-button value="telemetries" [disabled]="!deviceOk">
+        <ion-segment-button value="telemetries">
             <ion-icon name="radio-outline"></ion-icon>
             <ion-label>Telemetries</ion-label>
         </ion-segment-button>
