--- a/src/app/device-template/component-command/component-command.component.html
+++ b/src/app/device-template/component-command/component-command.component.html
@@ -7,7 +7,7 @@
     <div class="telemetry" *ngFor="let deviceCommand of deviceTemplateCommands">
 
         <ion-item-sliding>
-            <ion-item lines="inset" detail [routerLink]="['profile-command',deviceCommand['Id']]">
+            <ion-item lines="inset" detail [routerLink]="['profileCommand',deviceCommand['Id']]">
 
 
                 <ion-avatar slot="start">
