--- a/src/app/device-template/profile-command/profile-command.page.html
+++ b/src/app/device-template/profile-command/profile-command.page.html
@@ -13,7 +13,7 @@
         </ion-col>
         <ion-col size="4" class="ion-align-self-end">
             <ion-card color="transparent" class="deviceTemplate-card">
-                <ion-img src='assets/icon/property.png'></ion-img>
+                <ion-img src='assets/icon/command.png'></ion-img>
             </ion-card>
         </ion-col>
         <ion-col size="4" class="ion-align-self-center">
@@ -24,7 +24,7 @@
         </ion-col>
         <ion-col size="10" class="ion-align-self-center">
             <ion-list-header>
-                <ion-label class="text-top">{{ property['Name']}}</ion-label>
+                <ion-label class="text-top">{{command['Name']}}</ion-label>
             </ion-list-header>
         </ion-col>
         <ion-col size="1" class="ion-align-self-end">
@@ -34,7 +34,7 @@
     <ion-segment value="all" color="tertiary" class="animate__animated animate__slideInUp animate__fast" scrollable="true" mode="md" [(ngModel)]="segmentModel" (ionChange)="segmentChanged($event)" lines="none">
         <ion-segment-button value="profile">
             <ion-icon name="reader-outline"></ion-icon>
-            <ion-label>Property profile</ion-label>
+            <ion-label>Command profile</ion-label>
         </ion-segment-button>
     </ion-segment>
 
@@ -42,18 +42,11 @@
 
 <ion-content>
     <div *ngIf="segmentModel === 'profile'">
-        <ion-item [hidden]="property['IsWritable'] != false">
-            <ion-label>Writable</ion-label>OFF
+        <ion-item [hidden]="command['IsSynchronous'] != false">
+            <ion-label>Synchronous</ion-label>OFF
         </ion-item>
-        <ion-item [hidden]="property['IsWritable'] != true">
-            <ion-label>Writable</ion-label>ON
-        </ion-item>
-        <ion-item [hidden]="property['IsCloudable'] != false">
-            <ion-label>Cloudable</ion-label>OFF
-        </ion-item>
-
-        <ion-item [hidden]="property['IsCloudable'] != true">
-            <ion-label>Cloudable</ion-label>ON
+        <ion-item [hidden]="command['IsSynchronous'] != true">
+            <ion-label>Synchronous</ion-label>ON
         </ion-item>
     </div>
 </ion-content>
