--- a/src/app/device-template/component-telemetry/component-telemetry.component.html
+++ b/src/app/device-template/component-telemetry/component-telemetry.component.html
@@ -17,6 +17,11 @@
                 <ion-item-option color="danger" (click)="deleteTelemetry(deviceTelemetry['Id'], deviceTelemetry['Name'])" expandable>
                     <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
                 </ion-item-option>
+                <ion-item-option color="success" expandable [routerLink]="['editTelemetry',deviceTelemetry['Id']]">
+
+                    <ion-icon slot="icon-only" name="pencil-outline"></ion-icon>
+
+                </ion-item-option>
             </ion-item-options>
         </ion-item-sliding>
     </div>
