--- a/src/app/device-template/component-command/component-command.component.html
+++ b/src/app/device-template/component-command/component-command.component.html
@@ -20,6 +20,11 @@
                 <ion-item-option color="danger" expandable>
                     <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
                 </ion-item-option>
+                <ion-item-option color="success" expandable [routerLink]="['editCommand',deviceCommand['Id']]">
+
+                    <ion-icon slot="icon-only" name="pencil-outline"></ion-icon>
+
+                </ion-item-option>
             </ion-item-options>
         </ion-item-sliding>
     </div>
