--- a/src/app/device-template/edit-telemetry/edit-telemetry.page.html
+++ b/src/app/device-template/edit-telemetry/edit-telemetry.page.html
@@ -16,7 +16,7 @@
         </ion-col>
         <ion-col size="4" class="ion-align-self-end">
             <ion-card color="transparent" class="deviceTemplate-card">
-                <ion-img src='assets/icon/deviceTemp.png'></ion-img>
+                <ion-img src='assets/icon/telemetry.png'></ion-img>
 
             </ion-card>
         </ion-col>
