--- a/src/app/device-template/component-command/component-command.component.html
+++ b/src/app/device-template/component-command/component-command.component.html
@@ -6,7 +6,7 @@
 <ion-list>
     <div class="telemetry" *ngFor="let deviceCommand of deviceTemplateCommands">
 
-        <ion-item-sliding>
+        <ion-item-sliding #slidingItem>
             <ion-item lines="inset" detail [routerLink]="['profileCommand',deviceCommand['Id']]">
 
 
@@ -16,11 +16,13 @@
                 <ion-label>{{deviceCommand['Name']}}</ion-label>
             </ion-item>
 
-            <ion-item-options side="end">
-                <ion-item-option color="danger" expandable>
+            <ion-item-options side="end" (ionSwipe)="deleteCommand(slidingItem, deviceCommand['Id'], deviceCommand['Name'])">
+                <ion-item-option color="danger" expandable (click)="deleteCommand(slidingItem, deviceCommand['Id'], deviceCommand['Name'])">
                     <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
                 </ion-item-option>
-                <ion-item-option color="success" expandable [routerLink]="['editCommand',deviceCommand['Id']]">
+            </ion-item-options>
+            <ion-item-options side="start">
+                <ion-item-option color="success" expandable (click)="closeSliding(slidingItem)" [routerLink]="['editCommand',deviceCommand['Id']]">
 
                     <ion-icon slot="icon-only" name="pencil-outline"></ion-icon>
 
