--- a/src/app/device-template/component-property/component-property.component.html
+++ b/src/app/device-template/component-property/component-property.component.html
@@ -6,7 +6,7 @@
 <ion-list>
     <div class="telemetry" *ngFor="let deviceProperty of deviceTemplateProperties">
 
-        <ion-item-sliding>
+        <ion-item-sliding #slidingItem>
             <ion-item lines="inset" detail [routerLink]="['profileProperty',deviceProperty['Id']]">
 
 
@@ -16,11 +16,16 @@
                 <ion-label>{{deviceProperty['Name']}}</ion-label>
             </ion-item>
 
-            <ion-item-options side="end">
-                <ion-item-option color="danger" expandable>
+            <ion-item-options side="end" (ionSwipe)="deleteProperty(slidingItem, deviceProperty['Id'], deviceProperty['Name'])">
+
+                <ion-item-option color="danger" expandable (click)="deleteProperty(slidingItem, deviceProperty['Id'], deviceProperty['Name'])">
                     <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
                 </ion-item-option>
-                <ion-item-option color="success" expandable [routerLink]="['editProperty',deviceProperty['Id']]">
+
+            </ion-item-options>
+            <ion-item-options side="start">
+
+                <ion-item-option color="success" (click)="closeSliding(slidingItem)" expandable [routerLink]="['editProperty',deviceProperty['Id']]">
 
                     <ion-icon slot="icon-only" name="pencil-outline"></ion-icon>
 
