--- a/src/app/device-template/component-telemetry/component-telemetry.component.html
+++ b/src/app/device-template/component-telemetry/component-telemetry.component.html
@@ -5,7 +5,7 @@
 <ion-list>
     <div class="telemetry" *ngFor="let deviceTelemetry of deviceTemplateTelemetries">
 
-        <ion-item-sliding>
+        <ion-item-sliding #slidingItem>
             <ion-item lines="inset" detail [routerLink]="['profileTelemetry',deviceTelemetry['Id']]">
                 <ion-avatar slot="start">
                     <ion-icon color="tertiary" name="radio-outline"></ion-icon>
@@ -13,11 +13,16 @@
                 <ion-label>{{deviceTelemetry['Name']}}</ion-label>
             </ion-item>
 
-            <ion-item-options side="end">
-                <ion-item-option color="danger" (click)="deleteTelemetry(deviceTelemetry['Id'], deviceTelemetry['Name'])" expandable>
+            <ion-item-options side="end" (ionSwipe)="deleteTelemetry(slidingItem, deviceTelemetry['Id'], deviceTelemetry['Name'])">
+
+                <ion-item-option color="danger" expandable (click)="deleteTelemetry(slidingItem, deviceTelemetry['Id'], deviceTelemetry['Name'])">
                     <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
                 </ion-item-option>
-                <ion-item-option color="success" expandable [routerLink]="['editTelemetry',deviceTelemetry['Id']]">
+
+            </ion-item-options>
+            <ion-item-options side="start">
+
+                <ion-item-option color="success" (click)="closeSliding(slidingItem)" expandable [routerLink]="['editTelemetry',deviceTelemetry['Id']]">
 
                     <ion-icon slot="icon-only" name="pencil-outline"></ion-icon>
 
