--- a/src/app/device-template/device-template.page.html
+++ b/src/app/device-template/device-template.page.html
@@ -62,7 +62,7 @@
 
     <ion-list>
         <div class="telemetry" *ngFor="let deviceTemplate of listDeviceTemplates">
-            <ion-item-sliding>
+            <ion-item-sliding #slidingItem>
                 <ion-item lines="inset" detail [routerLink]="['profile-device-template',deviceTemplate['Id']]">
 
                     <ion-avatar slot="start">
@@ -71,13 +71,18 @@
                     <ion-label>{{deviceTemplate['Name']}}</ion-label>
                 </ion-item>
 
-                <ion-item-options side="end">
-                    <ion-item-option color="danger" (click)="deleteDeviceTemplate(deviceTemplate['Id'], deviceTemplate['Name'])" expandable>
+                <ion-item-options side="end" (ionSwipe)="deleteDeviceTemplate(slidingItem,deviceTemplate['Id'], deviceTemplate['Name'])">
+                    <ion-item-option color="danger" expandable (click)="deleteDeviceTemplate(slidingItem,deviceTemplate['Id'], deviceTemplate['Name'])">
 
                         <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
 
                     </ion-item-option>
-                    <ion-item-option color="success" expandable [routerLink]="['edit-device-template',deviceTemplate['Id']]">
+
+                </ion-item-options>
+
+                <ion-item-options side="start">
+
+                    <ion-item-option color="success" expandable (click)="closeSliding(slidingItem)" [routerLink]="['edit-device-template',deviceTemplate['Id']]">
 
                         <ion-icon slot="icon-only" name="pencil-outline"></ion-icon>
 
