--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -17,7 +17,7 @@
         <ion-tab-button tab="tab2">
             <ion-icon name="accessibility-outline"></ion-icon>
 
-            <ion-label>Patiente profile</ion-label>
+            <ion-label>Patient profile</ion-label>
         </ion-tab-button>
 
         <ion-tab-button tab="tab3">
