Advance in patientProfile

--- a/src/app/patient-profile/detail-patient-profile/detail-patient-profile.page.scss
+++ b/src/app/patient-profile/detail-patient-profile/detail-patient-profile.page.scss
@@ -56,7 +56,12 @@ ion-loading {
 .iconText>ion-col>ion-label {
     position: flex;
     font-size: 12px;
-    margin-left: 10px;
+    margin-left: 14px;
+}
+
+.segmentIcon {
+    margin-right: 7px;
+    height: 14px;
 }
 
 app-component-telemetry {
