--- a/src/app/patient-profile/patient-profile.page.html
+++ b/src/app/patient-profile/patient-profile.page.html
@@ -2,7 +2,7 @@
 
     <ion-toolbar>
 
-        <ion-icon size="large" class="ionadd" name="add-outline" slot="end" [routerLink]="['add-device-template']"></ion-icon>
+        <ion-icon size="large" class="ionadd" name="add-outline" slot="end" [routerLink]="['add-patient-profile']"></ion-icon>
 
         <ion-buttons slot="start">
             <ion-back-button text="Home" defaultHref="/tabs" icon="chevron-back-outline"></ion-back-button>
@@ -34,7 +34,7 @@
         <ion-col size="10" class="ion-align-self-center">
 
             <ion-list-header>
-                <ion-label class="text-top">Patient profile</ion-label>
+                <ion-label class="text-top">Patient profiles</ion-label>
             </ion-list-header>
 
         </ion-col>
@@ -50,18 +50,24 @@
 
 
     <ion-list>
-        <div class="telemetry" *ngFor="let deviceTemplate of listDeviceTemplates">
-            <ion-item-sliding #slidingItem>
-                <ion-item lines="inset" detail [routerLink]="['profile-device-template',deviceTemplate['Id']]">
+        <div class="patientProfile" *ngFor="let patientProfile of listPatientProfile">
 
+            <ion-item-sliding #slidingItem>
+
+                <ion-item class="item" detail [routerLink]="['detail-patient-profile',patientProfile['Id']]">
                     <ion-avatar slot="start">
                         <img src="assets/icon/disability.svg">
+
                     </ion-avatar>
-                    <ion-label>{{deviceTemplate['Name']}}</ion-label>
+
+                    <ion-label> {{patientProfile['Id']}}</ion-label>
+
+
                 </ion-item>
 
-                <ion-item-options side="end" (ionSwipe)="deleteDeviceTemplate(slidingItem,deviceTemplate['Id'], deviceTemplate['Name'])">
-                    <ion-item-option color="danger" expandable (click)="deleteDeviceTemplate(slidingItem,deviceTemplate['Id'], deviceTemplate['Name'])">
+
+                <ion-item-options side="end" (ionSwipe)="deletePatientProfile(slidingItem,patientProfile['Id'])">
+                    <ion-item-option color="danger" expandable (click)="deletePatientProfile(slidingItem,patientProfile['Id'])">
 
                         <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
 
@@ -71,7 +77,7 @@
 
                 <ion-item-options side="start">
 
-                    <ion-item-option color="success" expandable (click)="closeSliding(slidingItem)" [routerLink]="['edit-device-template',deviceTemplate['Id']]">
+                    <ion-item-option color="success" expandable (click)="closeSliding(slidingItem)" [routerLink]="['edit-patient-profile',patientProfile['Id']]">
 
                         <ion-icon slot="icon-only" name="pencil-outline"></ion-icon>
 
