list of condition accessmodes disability

--- a/src/app/patient-profile/detail-patient-profile/detail-patient-profile.page.scss
+++ b/src/app/patient-profile/detail-patient-profile/detail-patient-profile.page.scss
@@ -64,6 +64,10 @@ ion-loading {
     height: 14px;
 }
 
+ion-list-header {
+    margin-bottom: -9px;
+}
+
 app-component-telemetry {
     width: 100%;
 }
