--- a/src/app/patient-profile/detail-patient-profile/detail-patient-profile.page.html
+++ b/src/app/patient-profile/detail-patient-profile/detail-patient-profile.page.html
@@ -5,7 +5,7 @@
         <ion-icon size="large" class="ionadd" name="add-outline" slot="end" [routerLink]="['add-patient-profile']"></ion-icon>
 
         <ion-buttons slot="start">
-            <ion-back-button text="Home" defaultHref="/tabs" icon="chevron-back-outline"></ion-back-button>
+            <ion-back-button text="Home" defaultHref="/tabs/tab2" icon="chevron-back-outline"></ion-back-button>
         </ion-buttons>
         <ion-buttons slot="end">
             <ion-button>
@@ -84,17 +84,34 @@
 
             </ion-item>
         </ion-list>
+
+        <ion-list-header>
+            <ion-icon class="segmentIcon" name="language-outline"></ion-icon>Preferred language</ion-list-header>
+        <ion-item>
+
+            <ion-label *ngIf="patientProfile['PreferredLanguage'] == 1"> ES</ion-label>
+            <ion-label *ngIf="patientProfile['PreferredLanguage'] == 2"> EN</ion-label>
+            <ion-label *ngIf="patientProfile['PreferredLanguage'] == 3"> FR</ion-label>
+            <ion-label *ngIf="patientProfile['PreferredLanguage'] == 4"> IT</ion-label>
+            <ion-label *ngIf="patientProfile['PreferredLanguage'] == 5"> PR</ion-label>
+            <ion-label *ngIf="patientProfile['PreferredLanguage'] == 6"> DE</ion-label>
+            <ion-label *ngIf="patientProfile['PreferredLanguage'] == 7"> JA</ion-label>
+            <ion-label *ngIf="patientProfile['PreferredLanguage'] == 8"> KO</ion-label>
+            <ion-label *ngIf="patientProfile['PreferredLanguage'] == 9"> ZH</ion-label>
+
+
+        </ion-item>
     </div>
     <div *ngIf="segmentModel === 'disability'">
 
-        <!--    <app-component-telemetry></app-component-telemetry> -->
+        <app-component-disability></app-component-disability>
     </div>
     <div *ngIf="segmentModel === 'condition'">
-        <!--  <app-component-property></app-component-property> -->
+        <app-component-condition></app-component-condition>
 
     </div>
     <div *ngIf="segmentModel === 'accessMode'">
-        <!--  <app-component-command></app-component-command> -->
+        <app-component-access-mode></app-component-access-mode>
 
     </div>
 </ion-content>
