details disability condition

--- a/src/app/patient-profile/component-condition/component-condition.component.html
+++ b/src/app/patient-profile/component-condition/component-condition.component.html
@@ -8,7 +8,7 @@
         <ion-item-sliding #slidingItem>
             <ion-item lines="inset" detail [routerLink]="['condition',condi['Id']]">
                 <ion-avatar slot="start">
-                    <ion-icon color="tertiary" name="pulse-outline"></ion-icon>
+                    <ion-icon color="tertiary" name="list-circle-outline"></ion-icon>
                 </ion-avatar>
                 <ion-label>{{condi['Description']}}</ion-label>
             </ion-item>
